--- a/view/admin/article_index.html
+++ b/view/admin/article_index.html
@@ -1,14 +1,24 @@
-<!doctype html>
-<html ng-app>
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
-  </head>
-  <body>
-    <div>
-      <label>Name:</label>
-      <input type="text" ng-model="yourName" placeholder="Enter a name here">
-      <hr>
-      <h1>Hello {{yourName}}!</h1>
-    </div>
-  </body>
+<!DOCTYPE html>
+<html ng-controller="LayoutController">
+<head>
+<meta charset="UTF-8">
+<script data-main="/static/js/admin/article/main" src="/static/js/libs/require/require.min.js"></script>
+
+<title>{{title}}</title>
+
+<link rel="stylesheet" href="/static/css/base/base.css">
+</head>
+<body class="ng-cloak" ng-cloak>
+  <%include ../base/header%>
+  <div class="wrap_top_nav">
+    <nav id="topNav">
+      <ul>
+        <li class="active"><a href="#/list">文章列表</a></li>
+        <li class="active"><a href="#/add">新增文章</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="page" ng-view=""></div>
+</body>
+
 </html>
