--- a/view/home/activity/wall.html
+++ b/view/home/activity/wall.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" src="http://s0.qhimg.com/lib/jquery/1102.js"></script>
 <script type="text/javascript" src="http://s4.qhimg.com/static/535dde855bc726e2/socket.io-1.2.0.js"></script>
 <script type="text/javascript">
-	var socket = io("http://www.keything.net");
+	var socket = io("http://www.keything.net:8900");
 	//发送事件
 	//socket.emit("messages", "data");
 
