优化一点点

--- a/view/admin/index/index.html
+++ b/view/admin/index/index.html
@@ -9,10 +9,19 @@
   <%include ../../base/header%>
   <div>
   	<nav class="admin_nav">
-  		<ul>
-  			<li><a href="/admin/article">编辑期刊</a></li>
-  			<li><a href="/admin/share">每周分享</a></li>
-  			<li><a href="/admin/wechat">公众号消息</a></li>
+  		<ul class="fn-clear">
+  			<li>
+          <a class="front" href="/admin/article">编辑期刊</a>
+          <a class="back" href="/admin/article">编辑期刊2</a>         
+        </li>
+  			<li>
+          <a  class="front" href="/admin/share">每周分享</a>
+          <a class="back" href="/admin/article">每周分享2</a>
+        </li>
+  			<li>
+          <a class="front" href="/admin/wechat">公众号消息</a>
+          <a class="back" href="/admin/article">公众号消息2</a>
+        </li>
   		</ul>
   	</nav>
   </div>
