--- a/view/base/header.ejs
+++ b/view/base/header.ejs
@@ -1,5 +1,5 @@
 <header>
 	<div class="wrap">
-	  <h1><img class="logo" src="/static/img/logo.png" alt=""></h1>
+	  <h1><img class="logo" src="/static/img/logo.png" alt="">云盘后台管理系统</h1>
 	</div>
 </header>
