--- a/www/static/partials/admin/article/add.html
+++ b/www/static/partials/admin/article/add.html
@@ -1,9 +1,7 @@
 <div class="markdown-ctn">
-  	<h3>请使用markdown语法</h1>
     <div class="container">
-
       <input fileread="uploadme" type="file" accept="image/*">
-      <textarea id="editor" name="" id="" cols="30" rows="10" ng-model="content" ng-change="textChanged"></textarea>
+      <textarea id="editor" name="" id="" cols="30" rows="10" ng-model="content" ng-change="textChanged" class="markdownTextarea"></textarea>
       <div class="article-ctn" id="result" ng-bind-html="content|marked"></div>
     </div>
     <button class='submit' ng-click="submit();">提交</button>
