--- a/www/static/css/base/base.css
+++ b/www/static/css/base/base.css
@@ -1,10 +1,9 @@
-*{padding: 0;margin: 0;font-size: 16px;line-height: 20px;font-family: arial;}
+@import url('/static/css/rp.css');
 a, a:visited{color:#337ab7;text-decoration: none;}
 header{padding: 20px 0 20px 0;background-color: #4A6495}
-h1{font-size: 16px;color:#fff;font-weight: normal;line-height: 36px;}
 code{  padding: 2px 4px;font-size: 90%;color: #c7254e;background-color: #f9f2f4;border-radius: 4px;}
 .content{width: 1000px;margin: auto}
-.wrap{width: 1000px;margin: auto}
+.wrap{width: 1000px;}
 .content{margin-top: 80px;}
 .list{width: 800px;}
 .list .item{position: relative;padding-left: 70px;margin-top: 50px;}
@@ -17,7 +16,14 @@ code{  padding: 2px 4px;font-size: 90%;color: #c7254e;background-color: #f9f2f4;
 }
 header .logo {
   width: 50px;
-  margin-left: 20px;
+  margin:0 20px;
+  vertical-align: middle;
+}
+header .wrap h1 {
+  font-size: 26px;
+  color:#fff;
+  font-weight: normal;
+  line-height: 36px;
 }
 .article-ctn h1{
 	color: #000;
