--- a/view/admin/index/index.html
+++ b/view/admin/index/index.html
@@ -20,7 +20,7 @@
         </li>
   			<li>
           <a class="front" href="/admin/wechat">公众号消息</a>
-          <a class="back" href="/admin/article">公众号消息2</a>
+          <a class="back" href="/admin/wechat">公众号消息2</a>
         </li>
   		</ul>
   	</nav>
