--- a/www/static/css/share.css
+++ b/www/static/css/share.css
@@ -1,9 +1,7 @@
-@import url('/static/css/rp.css');
+@import url('/static/css/base/base-app.css');
 html{
-	height: 100%;
 }
 body{
-	height: 100%;
 	background: url(/static/img/yun.jpg) no-repeat;
 	background-size:cover;
 }
@@ -23,10 +21,9 @@ header img{
 }
 
 .main li{
-	line-height: 40px;
-	height: 40px;
+	height: 4rem;
 	text-align: left;
-	padding-left: 30px;
+	padding-left: 3rem;
 }
 
 .main .submit{
