--- a/view/home/share/index.html
+++ b/view/home/share/index.html
@@ -17,59 +17,59 @@
     <ul id="aUl">
       <li>
         1、演讲者准备充分<br>
-        <input type="radio" name="1" value="1">1分
-        <input type="radio" name="1" value="2">2分
-        <input type="radio" name="1" value="3">3分
-        <input type="radio" name="1" value="4">4分
-        <input type="radio" name="1" value="5">5分
+        <span><input type="radio" name="1" value="1">1分</span>
+        <span><input type="radio" name="1" value="2">2分</span>
+        <span><input type="radio" name="1" value="3">3分</span>
+        <span><input type="radio" name="1" value="4">4分</span>
+        <span><input type="radio" name="1" value="5">5分</span>
       </li>
       <li>
         2、演讲者口齿清晰，发音标准<br>
-        <input type="radio" name="2" value="1">1分
-        <input type="radio" name="2" value="2">2分
-        <input type="radio" name="2" value="3">3分
-        <input type="radio" name="2" value="4">4分
-        <input type="radio" name="2" value="5">5分
+        <span><input type="radio" name="2" value="1">1分</span>
+        <span><input type="radio" name="2" value="2">2分</span>
+        <span><input type="radio" name="2" value="3">3分</span>
+        <span><input type="radio" name="2" value="4">4分</span>
+        <span><input type="radio" name="2" value="5">5分</span>
       </li>
       <li>
         3、演讲者逻辑清晰，表达流畅<br>
-        <input type="radio" name="3" value="1">1分
-        <input type="radio" name="3" value="2">2分
-        <input type="radio" name="3" value="3">3分
-        <input type="radio" name="3" value="4">4分
-        <input type="radio" name="3" value="5">5分
+        <span><input type="radio" name="3" value="1">1分</span>
+        <span><input type="radio" name="3" value="2">2分</span>
+        <span><input type="radio" name="3" value="3">3分</span>
+        <span><input type="radio" name="3" value="4">4分</span>
+        <span><input type="radio" name="3" value="5">5分</span>
       </li>
       <li>
         4、演讲者积极与观众互动（问答）<br>
-        <input type="radio" name="4" value="1">1分
-        <input type="radio" name="4" value="2">2分
-        <input type="radio" name="4" value="3">3分
-        <input type="radio" name="4" value="4">4分
-        <input type="radio" name="4" value="5">5分
+        <span><input type="radio" name="4" value="1">1分</span>
+        <span><input type="radio" name="4" value="2">2分</span>
+        <span><input type="radio" name="4" value="3">3分</span>
+        <span><input type="radio" name="4" value="4">4分</span>
+        <span><input type="radio" name="4" value="5">5分</span>
       </li>
       <li>
         5、演讲者时间掌控好（没有严重超时）<br>
-        <input type="radio" name="5" value="1">1分
-        <input type="radio" name="5" value="2">2分
-        <input type="radio" name="5" value="3">3分
-        <input type="radio" name="5" value="4">4分
-        <input type="radio" name="5" value="5">5分
+        <span><input type="radio" name="5" value="1">1分</span>
+        <span><input type="radio" name="5" value="2">2分</span>
+        <span><input type="radio" name="5" value="3">3分</span>
+        <span><input type="radio" name="5" value="4">4分</span>
+        <span><input type="radio" name="5" value="5">5分</span>
       </li>
       <li>
         6、演讲内容或者形式富有新意<br>
-        <input type="radio" name="6" value="1">1分
-        <input type="radio" name="6" value="2">2分
-        <input type="radio" name="6" value="3">3分
-        <input type="radio" name="6" value="4">4分
-        <input type="radio" name="6" value="5">5分
+        <span><input type="radio" name="6" value="1">1分</span>
+        <span><input type="radio" name="6" value="2">2分</span>
+        <span><input type="radio" name="6" value="3">3分</span>
+        <span><input type="radio" name="6" value="4">4分</span>
+        <span><input type="radio" name="6" value="5">5分</span>
       </li>
       <li>
         7、演讲内容对工作有帮助或启发<br>
-        <input type="radio" name="7" value="1">1分
-        <input type="radio" name="7" value="2">2分
-        <input type="radio" name="7" value="3">3分
-        <input type="radio" name="7" value="4">4分
-        <input type="radio" name="7" value="5">5分
+        <span><input type="radio" name="7" value="1">1分</span>
+        <span><input type="radio" name="7" value="2">2分</span>
+        <span><input type="radio" name="7" value="3">3分</span>
+        <span><input type="radio" name="7" value="4">4分</span>
+        <span><input type="radio" name="7" value="5">5分</span>
       </li>
     </ul>
     <div class="remark">
