--- a/view/admin/article/index.html
+++ b/view/admin/article/index.html
@@ -8,18 +8,10 @@
 
 <title>期刊</title>
 
-<link rel="stylesheet" href="/static/css/base/base.css">
+<link rel="stylesheet" href="/static/css/admin/article.css">
 </head>
 <body class="ng-cloak" ng-cloak>
-  <%include ../../base/header%>
-  <div class="wrap_top_nav">
-    <nav id="topNav">
-      <ul>
-        <li class="active"><a href="#/list">文章列表</a></li>
-        <li class="active"><a href="#/add">新增文章</a></li>
-      </ul>
-    </nav>
-  </div>
+  <%include ../../base/header.html%>
   <div class="page" ng-view=""></div>
 </body>
 
