--- a/view/admin/index/index.html
+++ b/view/admin/index/index.html
@@ -6,21 +6,21 @@
 <link rel="stylesheet" href="/static/css/admin/index.css">
 </head>
 <body>
-  <%include ../../base/header%>
+  <%include ../../base/header.html%>
   <div>
   	<nav class="admin_nav">
   		<ul class="fn-clear">
   			<li>
-          <a class="front" href="/admin/article">编辑期刊</a>
-          <a class="back" href="/admin/article">编辑期刊2</a>         
+          <a class="back" href="/admin/article">期刊</a>
+          <a class="front" href="/admin/article"><img class="logo article" src="/static/img/logos/writing.png"/></a>         
         </li>
   			<li>
-          <a  class="front" href="/admin/share">每周分享</a>
-          <a class="back" href="/admin/article">每周分享2</a>
+          <a  class="back" href="/admin/share">每周分享</a>
+          <a class="front" href="/admin/share"><img class="logo share" src="/static/img/logos/share.png" /></a>
         </li>
   			<li>
-          <a class="front" href="/admin/wechat">公众号消息</a>
-          <a class="back" href="/admin/article">公众号消息2</a>
+          <a class="back" href="/admin/wechat">公众号消息</a>
+          <a class="front" href="/admin/wechat"><img class="logo wechat" src="/static/img/logos/wechat.png"/></a>
         </li>
   		</ul>
   	</nav>
