--- a/www/static/css/admin/index.css
+++ b/www/static/css/admin/index.css
@@ -4,20 +4,23 @@
 }
 .admin_nav li{
 	float: left;
-	width: 30%;
-	height: 150px;
+	width: 300px;
+	height: 300px;
 	border: 1px solid #aaa;
 	margin-left: 2%;
 	text-align: center;
-	line-height: 150px;
+	line-height: 300px;
 	position: relative;
+	font-size: 20px;
 	transform-style: preserve-3d;
-	-webkit-transition: transform 1.5s ease-out;
+	-webkit-transition: transform 0.5s ease-out;
 }
 .admin_nav li:hover{
 	transform:rotateY(180deg);
 }
-
+.admin_nav img {
+	width: 100%;
+}
 
 .admin_nav li .back{
 	transform:rotateY(180deg);
@@ -40,5 +43,3 @@
 	z-index: 2;
 	backface-visibility:hidden;
 }
-
-markdownTextarea
