--- a/www/static/css/base/base.css
+++ b/www/static/css/base/base.css
@@ -1,5 +1,5 @@
 @import url('/static/css/rp.css');
-a, a:visited{color:#337ab7;text-decoration: none;}
+a, a:visited{color:inherit;text-decoration: none;}
 header{padding: 20px 0 20px 0;background-color: #4A6495}
 code{  padding: 2px 4px;font-size: 90%;color: #c7254e;background-color: #f9f2f4;border-radius: 4px;}
 .content{width: 1000px;margin: auto}
@@ -10,7 +10,10 @@ code{  padding: 2px 4px;font-size: 90%;color: #c7254e;background-color: #f9f2f4;
 .list .item .step{position: absolute;width: 36px;height: 36px;top:-3px;left:0;border: 5px solid #4A6495;border-radius: 23px;text-align: center;line-height: 36px;}
 .list .item h2{font-size: 24px;font-weight: normal;}
 .list .item p{line-height: 30px;margin-top: 10px}
-
+html, body {
+	height: 100%;
+	width: 100%;
+}
 [ng-cloak] {
     display: none;
 }
